2004-12-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster_odbc.erl: Roster support via ODBC (not completed)

	* src/ejabberd_auth_internal.erl: Added remove_user hook
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/mod_roster.erl: Use remove_user hook
	* src/mod_offline.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise
	* src/mod_last.erl: Likewise
	* src/mod_last_odbc.erl: Likewise
	* src/mod_vcard.erl: Likewise
	* src/mod_private.erl: Likewise

	* src/mod_roster.erl: Added hooks for functions exported by
	mod_roster
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_sm.erl: Likewise
	* src/mod_privacy.erl: Likewise
	* src/mod_last.erl: Likewise
	* src/mod_last_odbc.erl: Likewise

2004-12-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_sm.erl: Updated missed message passing from
	previous patch

2004-12-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/pg.sql: DB creation script for postgres

	* src/odbc/ejabberd_odbc.erl: Experimental support for ODBC
	* src/mod_last_odbc.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_auth.erl: Likewise

2004-12-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_stats.erl: Minor optimizations

	* src/ejabberd_sm.erl: Added unset_presence_hook
	* src/mod_last.erl: Use unset_presence_hook instead of direct call

	* src/ejabberd_auth.erl: Splitted into ejabberd_auth_internal.erl,
	ejabberd_auth_ldap.erl, and ejabberd_auth_external.erl,
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise

2004-12-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Changed type of password field
	to "password"

	* src/jlib.hrl: More stream error defines (thanks to Sergei
	Golovan)

	* src/ejabberd_c2s.erl: Support for starttls_required option
	(thanks to Sergei Golovan)

	* src/mod_muc/mod_muc_room.erl: Fixed mistake in case condition
	(thanks to Sergei Golovan)
