@@ -1,3 +1,13 @@
+2004-12-30  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/odbc/ejabberd_odbc.erl: Load-balance ODBC requests between
+	several connections
+
+	* src/odbc/ejabberd_odbc_sup.erl: Supervisor for ODBC connections
+
+	* src/mod_muc/mod_muc_room.erl: Added missed type='form' attribute
+	in room configuration response (thanks to Badlop)
+
 2004-12-19  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_roster_odbc.erl: Roster support via ODBC (not completed)
